--- a/styles/main.css
+++ b/styles/main.css
@@ -3,3 +3,9 @@ body {
     color: hsl(0, 0%, 11%);
     font-family: Arial, Helvetica, sans-serif;
 }
+img {
+    max-width: 100%;
+}
+.logo {
+    max-width: 60px;
+}
