update style and banner

--- a/styles/main.css
+++ b/styles/main.css
@@ -2,10 +2,47 @@ body {
     background-color: bisque;
     color: hsl(0, 0%, 11%);
     font-family: Arial, Helvetica, sans-serif;
+    margin: 0px;
 }
 img {
     max-width: 100%;
 }
 .logo {
     max-width: 60px;
+}
+.main-header {
+    display: flex;
+    /* flex-direction: row;
+    flex-wrap: wrap; */
+    flex-flow: row wrap;
+    justify-content: space-between;
+    background-color: hsl(33, 96%, 71%);
+    align-items: flex-end;
+    padding: 10px 20px;
+}
+.navigation {
+    display: flex;
+    flex-flow: row wrap;
+}
+.navigation a {
+    text-decoration: none;
+    color:hsl(33, 100%, 8%);
+    padding: 15px;
+}
+.navigation a:hover {
+    color:hsl(33, 96%, 71%);
+    background-color: hsl(33, 100%, 8%);
+}
+.banner {
+    background-image: url("../images/pexels-jakkel-418831.jpg");
+    background-position: center;
+    background-size: cover;
+    min-height: 50vh;
+    display: grid;
+    place-items: center;
+}
+.banner h1 {
+    color: white;
+    background-color: black;
+    padding: 10px;
 }
