--- a/styles/main.css
+++ b/styles/main.css
@@ -33,6 +33,19 @@ img {
     color:hsl(33, 96%, 71%);
     background-color: hsl(33, 100%, 8%);
 }
+.nav-button {
+    align-self: center;
+    font-size: 32px;
+    padding: 5px;
+    min-width: 48px;
+    background-color: transparent;
+    border-color: transparent;
+    display: none;
+}
+.nav-button:focus {
+    background-color: #202020;
+    color: #d7d5d5;
+}
 .banner {
     background-image: url("../images/pexels-jakkel-418831.jpg");
     background-position: center;
