--- a/styles/main.css
+++ b/styles/main.css
@@ -1,7 +1,8 @@
 body {
     background-color: bisque;
     color: hsl(0, 0%, 11%);
-    font-family: Arial, Helvetica, sans-serif;
+    /* font-family: Arial, Helvetica, sans-serif; */
+    font-family: "Montserrat", sans-serif;
     margin: 0px;
 }
 img {
@@ -19,6 +20,7 @@ img {
     background-color: hsl(33, 96%, 71%);
     align-items: flex-end;
     padding: 10px 20px;
+    font-family: "PT Serif", serif;
 }
 .navigation {
     display: flex;
