added responsive js and contact page

--- a/styles/main.css
+++ b/styles/main.css
@@ -71,6 +71,13 @@ img {
     margin: 2em auto;
     gap: 20px;
 }
+.contact-content {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    max-width: 1200px;
+    margin: 2em auto;
+    gap: 20px;
+}
 .card-image {
     aspect-ratio: 1/1;
     object-fit: cover;
