--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -2,8 +2,26 @@
     .home-content {
         grid-template-columns: 1fr;
     }
+    .main-header {
+        position: relative;
+    }
     .navigation {
+        position: absolute;
+        top: 100%;
+        left: 0px;
+        z-index: 999;
+        background-color: hsl(33, 96%, 51%);
+        min-width: 100%;
         flex-direction: column;
+        max-height: 0px;
+        overflow: hidden;
+        transition: max-height 0.5s;
+    }
+    .navigation.open {
+        max-height: 50vh;
+    }
+    .navigation a {
+        min-width: 100%;
     }
     .search {
        width: 100%;
